# nanopb

./: MODULE.bazel
extra/bazel/: nanopb_cc_proto_library.bzl
