module(
    name = "nanopb",
    version = "0.4.9",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_cc", version = "0.0.10")
bazel_dep(name = "rules_python", version = "1.5.0-rc0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "31.1")
bazel_dep(name = "rules_proto_grpc", version = "5.0.0")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

PYTHON_VERSION = "3.12"

# No need for this since rules_python already creates our version.
use_repo(python, "python_versions")
python.toolchain(python_version = PYTHON_VERSION)

use_repo(pip, "nanopb_pypi")
pip.parse(
    hub_name = "nanopb_pypi",
    python_version = PYTHON_VERSION,
    requirements_lock = "@nanopb//:extra/requirements_lock.txt",
)
